<resources>
    <string name="app_name">Gestión de Proyectos</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">user@example.com</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_forum">Forum</string>
    <string name="sign_out">Sign Out</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="system_logo">System logo</string>
    <string name="welcome_message">Welcome</string>
    <string name="menu_projects">Projects</string>
    <string name="menu_profile">Profile</string>
    <string name="project_image_description">Project image</string>
    <string name="user_profile_picture">User profile picture</string>
    <string name="name">Name</string>
    <string name="phone">Phone number</string>
    <string name="department">Department</string>
    <string name="state">State</string>
    <string name="project">Project</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="unknown">Unknown</string>
    <string name="collaborator_state_active">Active</string>
    <string name="collaborator_state_inactive">Inactive</string>
    <string name="id" translatable="false">ID</string>
    <string name="menu_edit_profile">Edit Profile</string>
    <string name="save_profile">Save</string>
    <string name="change_profile_picture_button">Change profile picture button</string>
    <string name="menu_register_profile">Register Profile</string>
    <string name="add_a_profile_picture">Add a profile picture</string>
    <string name="last_name">Lastname</string>
    <string name="complete_profile">Please complete the following fields in order to continue using the app.</string>
    <string name="menu_collaborators">Collaborators</string>
    <string name="no_project">Unassigned</string>
    <string name="forum_item_reply_button">Reply</string>
    <string name="view">View</string>
    <string name="create_forum_item">Create</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="fragment_detail_project">Details</string>
    <string name="project_card">Projects</string>
    <string name="edit">Edit</string>
    <string name="type">Type</string>
    <string name="menu_collaborator">Collaborator</string>
    <string name="unassign">Unassign Project</string>
    <string name="menu_forum_item">Forum Item\n</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="reply">Reply</string>
    <string name="content">Content</string>
    <string name="author">Author</string>
    <string name="date">Date</string>
    <string name="replies">Replies</string>
</resources>
