<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.gestindeproyectos.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_collaborators"
        android:name="com.example.gestindeproyectos.ui.collaborators.CollaboratorsFragment"
        android:label="@string/menu_collaborators"
        tools:layout="@layout/fragment_collaborators" />

    <fragment
        android:id="@+id/nav_collaborator"
        android:name="com.example.gestindeproyectos.ui.collaborators.CollaboratorFragment"
        android:label="@string/menu_collaborator"
        tools:layout="@layout/fragment_collaborator" />

    <fragment
        android:id="@+id/nav_projects"
        android:name="com.example.gestindeproyectos.ui.projects.ProjectsFragment"
        android:label="@string/menu_projects"
        tools:layout="@layout/fragment_projects" />

    <fragment
        android:id="@+id/nav_forum"
        android:name="com.example.gestindeproyectos.ui.forum.ForumFragment"
        android:label="@string/menu_forum"
        tools:layout="@layout/fragment_forum" />

    <fragment
        android:id="@+id/nav_forum_item"
        android:name="com.example.gestindeproyectos.ui.forum.ForumItemFragment"
        android:label="@string/menu_forum_item"
        tools:layout="@layout/fragment_forum_item" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.gestindeproyectos.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment

        android:id="@+id/nav_edit_profile"
        android:name="com.example.gestindeproyectos.ui.profile.EditProfileFragment"
        android:label="@string/menu_edit_profile"
        tools:layout="@layout/fragment_edit_profile" />

    <fragment
        android:id="@+id/nav_register_profile"
        android:name="com.example.gestindeproyectos.ui.profile.RegisterProfileFragment"
        android:label="@string/menu_register_profile"
        tools:layout="@layout/fragment_register_profile" />

    <fragment
        android:id="@+id/detail_project"
        android:name="com.example.gestindeproyectos.ui.projects.DetailProjectFragment"
        android:label="@string/fragment_detail_project"
        tools:layout="@layout/fragment_detail_project" />

    <fragment
        android:id="@+id/edit_details_project"
        android:name="com.example.gestindeproyectos.ui.projects.EditDetailsFragment"
        android:label="@string/fragment_detail_project"
        tools:layout="@layout/fragment_edit_details" />

</navigation>