<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_collaborators"
            android:icon="@drawable/menu_collaborators"
            android:title="@string/menu_collaborators"
            android:visible="false" />
        <item
            android:id="@+id/nav_projects"
            android:icon="@drawable/menu_project"
            android:title="@string/menu_projects" />
        <item
            android:id="@+id/nav_forum"
            android:icon="@drawable/menu_forum"
            android:title="@string/menu_forum" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/menu_profile"
            android:title="@string/menu_profile" />
        <!--
        <item
            android:id="@+id/nav_sign_out"
            android:icon="@drawable/menu_sign_out"
            android:onClick="signOut"
            android:title="@string/sign_out" />
        -->
    </group>
</menu>